# PEA-2

./: CMakeLists.txt  main.cpp
Tree/Node/: Node.cpp  Node.h
algorithms/: AlgoFrame.h
algorithms/AntColony/: AntColonyOptimization.cpp  AntColonyOptimization.h
algorithms/NearestNeighbour/: NearestNeighbour.cpp  NearestNeighbour.h
algorithms/SimulatedAnnealing/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
algorithms/Tabu_search/: TabuSearch.cpp  TabuSearch.h
algorithms/pomocnicze/: FixedSizeQueue.h
algorithms/pomocnicze/ant/: Ant.cpp  Ant.h
algorithms/pomocnicze/statCalculator/: statCalculator.cpp  statCalculator.h
algorithms/pomocnicze/usun_wpolne/: usunWspolne.cpp  usunWspolne.h
algorithms/pomocnicze/valueCalculator/: ValueCalculator.cpp  ValueCalculator.h
algorithms/tabu_search/: TabuSearch.cpp  TabuSearch.h
config/configClass/: Config.cpp  Config.h
config/configFiles/: config.json
data/data_files/: 4nodes.txt  async12nodes.txt  async4nodes.txt  data140a.txt  data200a.txt
data/output/: async.txt  macbook_kuby.txt  output.txt  pierwsze_reight.txt  test.txt  test123.txt  testujemy.txt  windows.txt  wyniki.txt  wyniki2.txt  wyniki3.txt  wyniki4.txt  zajecia.txt
tester/: Tester.cpp  Tester.h
